2003-01-06  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/base.cpp: Add introduction to documentation.

	* src/mol.cpp: Don't attempt to use Kekulize or Begin/EndModify to
	detect aromaticity.

	* src/phmodel.txt, src/phmodeldata.h: Add histidine transformation
	and unused tryptophan transformation to help with problems
	observed by Richard Gillian (PR#575964).

	* src/resdata.txt src/resdata.h: Fix incorrect bond orders for ARG
	residue. (PR#575964).

	* test/matrixtest.cpp: Make matrix test a bit more verbose to make
	debugging problems on non-Intel platforms easier. (Relates to
	PR#647417). Problem derives from numerical accuracy, but loosening
	tolerance to 2e-6 solves the problem.
	
2003-01-15/16  Peter Murray-Rust <pm286@cam.ac.uk>
               Vincent Favre-Nicolin <vincefn@users.sourceforge.net>
	
	* Changes to compile using the free Borland C++ compiler 5.5.1:
	a few fixes ISO C++ fixes, some #if's and added makefiles (bc32.mak)

2003-01-06  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	Lots of changes from the last few weeks.

	* Doxyfile: Bump to 1.100.1. Make sure to check .cpp files for
	docs too.

	* Makefile.in (disclean): Remove doc/API for distclean target.

	* src/bin2hex.pl: Add comments to headers about contents
	(i.e. what the headers do, why they're not supposed to be installed).

	* src/chains.cpp: Fix mistake in Pyroglutamate comment from OE->OB
	find/replace.
	
	* src/aromatic.txt, src/atomtype.txt, src/element.txt,
	src/extable.txt, src/phmodel.txt, src/resdata.txt, src/types.txt:
	Updated comments at top of file to give more documentation and
	point to appropriate source files.
	
	* src/atom.cpp, src/base.h, src/bitvec.cpp, src/bitvec.h,
	src/bond.cpp, src/data.cpp, src/data.h, src/fileformat.h,
	src/generic.h, src/grid.h, src/mol.cpp, src/mol.cpp,
	src/molchrg.cpp, src/molchrg.h src/obutil.cpp, src/obutil.h,
	src/parsmart.cpp, src/parsmart.h, src/patty.cpp, src/patty.h,