@@ -292,6 +292,8 @@ public:
     unsigned int  MemberOfRingCount()     const;
     //! The size of the smallest ring that contains this atom (0 if not in a ring)
     unsigned int  MemberOfRingSize()	  const;
+    //! The smallest angle of bonds to this atom
+    float	  SmallestBondAngle();
     //! The sum of the bond orders of the bonds to the atom (i.e. double bond = 2...)
     unsigned int  BOSum()                 const;
     //! The sum of the bond orders of bonds to the atom, considering only KDouble, KTriple bonds
