@@ -46,8 +46,8 @@ static const char ResidueData[] = {
  0x4E,0x44,0x20,0x43,0x47,0x20,0x43,0x44,0x20,0x31,0x0A,0x42,0x4F,0x4E,0x44,
  0x20,0x43,0x44,0x20,0x4E,0x45,0x20,0x31,0x0A,0x42,0x4F,0x4E,0x44,0x20,0x4E,
  0x45,0x20,0x43,0x5A,0x20,0x31,0x0A,0x42,0x4F,0x4E,0x44,0x20,0x43,0x5A,0x20,
- 0x4E,0x48,0x32,0x20,0x31,0x0A,0x42,0x4F,0x4E,0x44,0x20,0x43,0x5A,0x20,0x4E,
- 0x48,0x31,0x20,0x32,0x0A,0x42,0x4F,0x4E,0x44,0x20,0x4E,0x20,0x48,0x20,0x31,
+ 0x4E,0x48,0x32,0x20,0x32,0x0A,0x42,0x4F,0x4E,0x44,0x20,0x43,0x5A,0x20,0x4E,
+ 0x48,0x31,0x20,0x31,0x0A,0x42,0x4F,0x4E,0x44,0x20,0x4E,0x20,0x48,0x20,0x31,
  0x0A,0x42,0x4F,0x4E,0x44,0x20,0x48,0x4E,0x20,0x4E,0x20,0x31,0x0A,0x42,0x4F,
  0x4E,0x44,0x20,0x4E,0x48,0x31,0x20,0x31,0x48,0x48,0x31,0x20,0x31,0x0A,0x42,
  0x4F,0x4E,0x44,0x20,0x4E,0x48,0x31,0x20,0x32,0x48,0x48,0x31,0x20,0x31,0x0A,
