@@ -1,4 +1,12 @@
-2003-01-06  Geoff Hutchison  <hutchisn@chem.northwestern.edu>
+2003-02-28  Geoff Hutchison  <hutchisn@chem.northwestern.edu>
+
+	* src/mol.h: Add new method OBAtom::SamllestBondAngle().
+
+	* src/atom.cpp: Implement it.
+
+	* 
+
+2003-01-17  Geoff Hutchison  <hutchisn@chem.northwestern.edu>
 
 	* src/base.cpp: Add introduction to documentation.
 
